add the @coffeekraken/favicons component

--- a/layout/starter-kit/package.json
+++ b/layout/starter-kit/package.json
@@ -8,7 +8,7 @@
     "dist.js": "rm -rf dist/js && webpack",
     "dist.js.analyzer": "rm -rf dist/js && webpack --config webpack.analyzer.config.js",
     "dist.scss": "sass src/scss/style.scss dist/css/style.css",
-    "dist.img": "imagemin src/img/**/* --out-dir=dist/img",
+    "dist.img": "coffeekraken-imagemin -s src/img -o dist/img -q 80",
     "dist.fonts": "rm -rf dist/fonts && cp -R src/fonts dist/fonts",
     "pretty-quick": "pretty-quick",
     "open-browser": "open http://0.0.0.0:8080",
@@ -59,6 +59,7 @@
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "@coffeekraken/imagemin": "^1.0.0",
     "@coffeekraken/scripts-stack": "^0.0.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -72,8 +73,6 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "http-server": "^0.11.1",
     "husky": "^3.0.9",
-    "imagemin": "^7.0.1",
-    "imagemin-cli": "^5.0.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "sass": "^1.23.3",
