add @coffeekraken/favicons in starter-kit

--- a/layout/starter-kit/package.json
+++ b/layout/starter-kit/package.json
@@ -10,6 +10,7 @@
     "dist.scss": "sass src/scss/style.scss dist/css/style.css",
     "dist.img": "coffeekraken-imagemin -s src/img -o dist/img -q 80",
     "dist.fonts": "rm -rf dist/fonts && cp -R src/fonts dist/fonts",
+    "dist.favicons": "rm -rf dist/favicons && coffeekraken-favicons -s src/img/favicon.png -o dist/favicons -h dist/favicons/favicons.html",
     "pretty-quick": "pretty-quick",
     "open-browser": "open http://0.0.0.0:8080",
     "server": "php -S 0.0.0.0:8080 -t .",
@@ -59,6 +60,7 @@
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "@coffeekraken/favicons": "^1.0.0",
     "@coffeekraken/imagemin": "^1.0.0",
     "@coffeekraken/scripts-stack": "^0.0.4",
     "babel-eslint": "^10.0.3",
