--- a/layout/starter-kit/package.json
+++ b/layout/starter-kit/package.json
@@ -7,14 +7,18 @@
     "dist": "npm run dist.js && npm run dist.scss && npm run dist.img && npm run dist.fonts",
     "dist.js": "rm -rf dist/js && webpack",
     "dist.js.analyzer": "rm -rf dist/js && webpack --config webpack.analyzer.config.js",
-    "dist.scss": "sass src/scss/style.scss dist/css/style.css",
+    "dist.scss": "sass src/scss/style.scss dist/css/style.css && npm run dist.scss.postcss",
+    "dist.scss.postcss": "postcss dist/css/style.css -o dist/css/style.css -u postcss-preset-env",
     "dist.img": "coffeekraken-imagemin -s src/img -o dist/img -q 80",
     "dist.fonts": "rm -rf dist/fonts && cp -R src/fonts dist/fonts",
     "dist.favicons": "rm -rf dist/favicons && coffeekraken-favicons -s src/img/favicon.png -o dist/favicons -h dist/favicons/favicons.html",
     "pretty-quick": "pretty-quick",
-    "open-browser": "open http://0.0.0.0:8080",
     "server": "php -S 0.0.0.0:8080 -t .",
-    "start": "coffeekraken-scripts-stack server open-browser -i start -i dist"
+    "browsersync": "browser-sync start --proxy '0.0.0.0:8080' --serveStatic 'dist' --files 'dist' --port 3000",
+    "browsersync.chrome": "open-cli http://0.0.0.0:3000 -- 'google chrome'",
+    "browsersync.firefox": "open-cli http://0.0.0.0:3000 -- 'firefox'",
+    "browsersync.safari": "open-cli http://0.0.0.0:3000 -- 'safari'",
+    "start": "coffeekraken-scripts-stack server browsersync -i start -i dist"
   },
   "watch": {
     "dist.js": {
@@ -65,6 +69,7 @@
     "@coffeekraken/scripts-stack": "^0.0.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -75,6 +80,8 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "http-server": "^0.11.1",
     "husky": "^3.0.9",
+    "open-cli": "^5.0.0",
+    "postcss-cli": "^6.1.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "sass": "^1.23.3",
