--- a/layout/starter-kit/.eslintrc
+++ b/layout/starter-kit/.eslintrc
@@ -1,5 +1,11 @@
 {
   "extends": ["airbnb", "prettier"],
   "parser": "babel-eslint",
-  "rules": {}
+  "rules": {
+    "import/newline-after-import": "off"
+  },
+  "env": {
+    "browser": true,
+    "node": true
+  }
 }
