--- a/layout/starter-kit/package.json
+++ b/layout/starter-kit/package.json
@@ -94,6 +94,8 @@
     "@babel/polyfill": "^7.7.0",
     "@coffeekraken/gridle": "0.0.4",
     "core-js": "^3.4.1",
+    "cssuseragent": "^2.1.31",
+    "fastclick": "^1.0.6",
     "lodash": "^4.17.15"
   }
 }
