--- a/docblock/docblock-to-markdown/package.json
+++ b/docblock/docblock-to-markdown/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@coffeekraken/docblock-to-markdown",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Parse and transform docblocks from your codebase into nice markdown files with ease.",
   "bin": {
-    "coffeekraken-docblock-to-markdown" : "./bin/coffeekraken-docblock-to-markdown"
+    "coffeekraken-docblock-to-markdown": "./bin/coffeekraken-docblock-to-markdown"
+  },
+  "scripts": {
+    "dist": "rm -rf dist && babel src -d dist",
+    "test": "./bin/coffeekraken-docblock-to-markdown -f 'tests-files/*' -d doc"
   },
   "keywords": [
     "coffee",
@@ -30,11 +34,17 @@
     "chai-json-schema": "^1.4.0",
     "fs": "0.0.1-security",
     "jsonschema": "^1.1.0",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "jest": "^24.9.0"
   },
   "dependencies": {
-    "coffeekraken-docblock-json-to-markdown": "^1.0.0",
-    "coffeekraken-docblock-parser": "^1.0.0",
+    "@coffeekraken/docblock-json-to-markdown": "0.0.1",
+    "@coffeekraken/docblock-parser": "0.0.1",
     "commander": "^2.9.0",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
