--- a/layout/pre-view/package.json
+++ b/layout/pre-view/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffeekraken/pre-view",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple command line interface that let you preview your blade or twig views in your favorite browser",
   "homepage": "https://coffeekraken.io",
   "bin": {
@@ -26,7 +26,9 @@
     }
   ],
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "chalk": "^3.0.0"
+  },
   "dependencies": {
     "@coffeekraken/form-style": "0.0.2",
     "@coffeekraken/select-webcomponent": "0.0.3",
