--- a/layout/pre-view/package.json
+++ b/layout/pre-view/package.json
@@ -33,6 +33,7 @@
     "@coffeekraken/form-style": "0.0.2",
     "@coffeekraken/select-webcomponent": "0.0.3",
     "@coffeekraken/sugar": "^1.0.4",
+    "@coffeekraken/text-intro": "^1.0.0",
     "@coffeekraken/typography-style": "0.0.1",
     "commander": "^4.0.1",
     "get-bin-path": "^4.0.0",
