--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -11,6 +11,7 @@
       "url": "http://olivierbossel.com"
     }
   ],
+  "main": "dist/js/_all.js",
   "license": "MIT",
   "scripts": {
     "postinstall": "node ./scripts/postinstall.js"
@@ -27,12 +28,17 @@
     "form-serialize": "^0.7.2",
     "fs-extra": "^6.0.1",
     "hotkeys-js": "^3.7.3",
+    "inline-style-prefixer": "^5.1.0",
+    "jss": "^10.0.0",
+    "jss-plugin-global": "^10.0.0",
+    "jss-plugin-vendor-prefixer": "^10.0.0",
     "lodash": "^4.17.15",
     "mobile-detect": "^1.4.4",
     "on-change": "^1.6.2",
     "rxjs": "^5.5.12",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
+    "uniqid": "^5.2.0",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {}
