--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coffeekraken/sugar",
   "description": "A little sugar in your codebase",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "homepage": "http://coffeekraken.io",
   "author": "Coffeekraken <hello@coffeekraken.io>",
   "contributors": [
@@ -23,6 +23,8 @@
     "custom-event": "^1.0.1",
     "document-register-element": "^1.14.3",
     "domready": "^1.0.8",
+    "download-file": "^0.1.5",
+    "downloads-folder": "^1.0.2",
     "es6-object-assign": "^1.1.0",
     "fastdom": "^1.0.9",
     "form-serialize": "^0.7.2",
@@ -33,6 +35,7 @@
     "jss-plugin-global": "^10.0.0",
     "jss-plugin-vendor-prefixer": "^10.0.0",
     "lodash": "^4.17.15",
+    "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
     "on-change": "^1.6.2",
     "rxjs": "^5.5.12",
