--- a/style/button-style/package.json
+++ b/style/button-style/package.json
@@ -32,6 +32,7 @@
     "@coffeekraken/sugar": "^1.0.5"
   },
   "devDependencies": {
+    "@coffeekraken/typography-style": "0.0.1",
     "fs-extra": "^8.1.0"
   }
 }
