--- a/layout/code-playground/package.json
+++ b/layout/code-playground/package.json
@@ -56,15 +56,16 @@
     "@coffeekraken/notification-webcomponent": "^1.0.0",
     "@coffeekraken/scrollbar-webcomponent": "^1.0.0",
     "@coffeekraken/share-webcomponent": "^1.0.1",
-    "@coffeekraken/sugar": "^1.0.8",
+    "@coffeekraken/sugar": "^1.0.12",
     "@coffeekraken/text-intro": "^1.0.0",
     "@coffeekraken/tooltip-style": "^1.0.0",
     "@coffeekraken/typography-style": "0.0.1",
     "codemirror": "^5.42.2",
-    "cookie-session": "^2.0.0-beta.1",
+    "cookie-session": "^2.0.0-beta.3",
     "cryptr": "^2.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.0",
     "golden-layout": "^1.5.9",
     "http": "0.0.0",
     "jquery": "^3.4.1",
