--- a/layout/starter-kit/package.json
+++ b/layout/starter-kit/package.json
@@ -9,7 +9,7 @@
     "dist.js.bundle": "webpack --config webpack.config.js",
     "dist.js.analyzer": "rm -rf dist/js && webpack --config webpack.analyzer.config.js",
     "dist.scss": "node .scripts/sass.js && npm run dist.scss.postcss",
-    "dist.scss.postcss": "postcss dist/css/style.css -o dist/css/style.css -u postcss-preset-env",
+    "dist.scss.postcss": "postcss dist/css/style.css -o dist/css/style.css -u postcss-preset-env --map false",
     "dist.img": "coffeekraken-imagemin -s src/img -o dist/img -q 80",
     "dist.fonts": "rm -rf dist/fonts && cp -R src/fonts dist/fonts",
     "dist.favicons": "rm -rf dist/favicons && coffeekraken-favicons -s src/img/favicon.png -o dist/favicons -h dist/favicons/favicons.html",
@@ -90,6 +90,7 @@
     "pretty-quick": "^2.0.1",
     "sass": "^1.23.3",
     "sass-glob-importer": "^1.0.1",
+    "scss-bundle": "^3.0.2",
     "stylelint": "^12.0.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
@@ -97,7 +98,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@coffeekraken/gridle": "0.0.4",
+    "@coffeekraken/gridle": "0.0.6",
+    "@coffeekraken/sugar": "^1.0.15",
     "core-js": "^3.4.1",
     "cssuseragent": "^2.1.31",
     "fastclick": "^1.0.6",
