--- a/terminal/monorepo/package.json
+++ b/terminal/monorepo/package.json
@@ -30,14 +30,18 @@
   "license": "MIT",
   "homepage": "https://coffeekraken.io",
   "dependencies": {
+    "babel-jest": "^24.9.0",
     "commander": "^4.0.1",
     "config": "^3.2.4",
     "exec-sh": "^0.3.4",
+    "get-folder-size": "^2.0.1",
+    "jest": "^24.9.0",
+    "jest-raw-loader": "^1.0.1",
     "pkg-up": "^3.1.0"
   },
   "devDependencies": {
     "@coffeekraken/docblock-to-markdown": "0.0.8",
-    "@coffeekraken/sugar": "^1.0.19",
+    "@coffeekraken/sugar": "^1.0.20",
     "app-root-path": "^3.0.0",
     "find-up": "^4.1.0",
     "glob": "^7.1.6"
