--- a/package.json
+++ b/package.json
@@ -2,67 +2,8 @@
   "name": "coffeekraken",
   "version": "1.0.0",
   "description": "We are a young collectve of front-end creative developers with one goal in mind. Build tools to make every team working day life better",
-  "scripts": {
-    "test": "jest --config ../../jest.config.js",
-    "dist": "ck run dist.js && ck run dist.js.bundle && ck run dist.scss && ck run dist.img",
-    "dist.js": "babel src --root-mode upward -d dist --ignore '**/*.bundle.js'",
-    "dist.js.bundle": "webpack --config ../../webpack.config.js --env.script='dist.js.bundle'",
-    "dist.scss": "sass src/scss:dist/css --load-path=node_modules --load-path=node_modules/@coffeekraken",
-    "dist.img": "coffeekraken-imagemin -s src/img -o dist/img -q 80",
-    "doc": "coffeekraken-monorepo doc",
-    "doc.all": "coffeekraken-monorepo doc all",
-    "doc.map": "coffeekraken-monorepo docMap",
-    "demo": "ck run demo.dist && ck run demo.server",
-    "demo.dist": "ck run demo.dist.js && ck run demo.dist.scss && ck run demo.dist.img",
-    "demo.dist.js": "babel demo/src --root-mode upward -d demo/dist --ignore '**/*.bundle.js'",
-    "demo.dist.js.bundle": "webpack --config ../../webpack.config.js --env.script='demo.dist.js.bundle'",
-    "demo.dist.scss": "sass demo/src/scss/style.scss demo/dist/css/style.css --load-path=node_modules --load-path=node_modules/@coffeekraken",
-    "demo.dist.img": "coffeekraken-imagemin -s demo/src/img -o demo/dist/img -q 80",
-    "demo.server": "open http://127.0.0.1:8080 && http-server ./demo",
-    "start": "ck-scripts-stack -i start"
-  },
-  "watch": {
-    "test": {
-      "paths": "tests/**/*.js"
-    },
-    "dist.js": {
-      "paths": "src/**/*!(.bundle).js"
-    },
-    "dist.js.bundle": {
-      "paths": "src/**/*.bundle.js"
-    },
-    "dist.scss": {
-      "paths": "src/**/*.scss"
-    },
-    "dist.img": {
-      "paths": [
-        "src/**/*.{jpg,jpeg,png,gif,svg}"
-      ]
-    },
-    "demo.dist.js": {
-      "paths": [
-        "demo/src/js/**/*!(.bundle).js"
-      ]
-    },
-    "demo.dist.js.bundle": {
-      "paths": [
-        "demo/src/js/**/*.bundle.js"
-      ]
-    },
-    "demo.dist.scss": {
-      "paths": [
-        "demo/src/scss/**/*.scss"
-      ]
-    },
-    "demo.dist.img": {
-      "paths": [
-        "demo/src/**/*.{jpg,jpeg,png,gif,svg}"
-      ]
-    }
-  },
-  "pre-commit": [
-    
-  ],
+  "scripts": {},
+  "pre-commit": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Coffeekraken/coffeekraken.git"
@@ -86,32 +27,11 @@
   },
   "homepage": "https://github.com/Coffeekraken/coffeekraken#readme",
   "dependencies": {
-    "@babel/helper-create-class-features-plugin": "^7.7.4",
-    "@babel/plugin-proposal-export-default-from": "^7.7.4",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.7",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
-    "glob": "^7.1.6",
-    "jest-raw-loader": "^1.0.1"
+    "@coffeekraken/monorepo": "0.0.16",
+    "glob": "^7.1.6"
   },
-  "globalDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/cli": "^7.7.4",
-    "@coffeekraken/docblock-to-markdown": "^0.0.4",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "http-server": "^0.11.1",
-    "@coffeekraken/scripts-stack": "^0.0.11",
-    "@coffeekraken/imagemin": "^1.0.0",
-    "core-js": "^3.4.2",
-    "jest": "^24.9.0",
-    "sass": "^1.23.7",
-    "node-sass": "^4.13.0"
-  },
+  "globalDependencies": {},
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "pre-commit": "^1.2.2"
   }
 }
