--- a/terminal/monorepo/package.json
+++ b/terminal/monorepo/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@coffeekraken/monorepo",
-  "version": "0.0.14",
+  "version": "0.0.17",
   "description": "Manage easily monorepo scripts, tests, etc...",
   "bin": {
     "ck": "./bin/coffeekraken-monorepo.js",
     "ck-monorepo": "./bin/coffeekraken-monorepo.js",
     "coffeekraken-monorepo": "./bin/coffeekraken-monorepo.js"
   },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/Coffeekraken/coffeekraken/tree/master/terminal/monorepo"
@@ -30,20 +31,31 @@
   "license": "MIT",
   "homepage": "https://coffeekraken.io",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
+    "@coffeekraken/imagemin": "^1.0.0",
+    "@coffeekraken/scripts-stack": "0.0.20",
+    "babel": "^6.23.0",
     "babel-jest": "^24.9.0",
-    "commander": "^4.0.1",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "commander": "^4.1.0",
     "config": "^3.2.4",
+    "core-js": "^3.6.2",
     "exec-sh": "^0.3.4",
     "get-folder-size": "^2.0.1",
+    "http-server": "^0.12.0",
     "jest": "^24.9.0",
     "jest-raw-loader": "^1.0.1",
-    "pkg-up": "^3.1.0"
-  },
-  "devDependencies": {
+    "pkg-up": "^3.1.0",
+    "sass": "^1.24.2",
+    "webpack": "^4.41.5",
     "@coffeekraken/docblock-to-markdown": "0.0.8",
-    "@coffeekraken/sugar": "^1.0.20",
+    "@coffeekraken/sugar": "^1.0.22",
     "app-root-path": "^3.0.0",
     "find-up": "^4.1.0",
     "glob": "^7.1.6"
+  },
+  "devDependencies": {
   }
 }
