--- a/terminal/scripts-stack/package.json
+++ b/terminal/scripts-stack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffeekraken/scripts-stack",
-  "version": "0.0.11",
+  "version": "0.0.20",
   "description": "Nice terminal interface to handle npm/yarn scripts execution as well as watch and run automatically the wanted ones",
   "homepage": "https://coffeekraken.io",
   "bin": {
@@ -42,6 +42,7 @@
     "commander": "^2.9.0",
     "core-js": "^3.4.2",
     "create-symlink": "^1.0.0",
+    "find-up": "^4.1.0",
     "flat": "^4.1.0",
     "log-symbols": "^2.1.0",
     "node-notifier": "^5.1.2",
