--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coffeekraken/sugar",
   "description": "A little sugar in your codebase",
-  "version": "1.0.20",
+  "version": "1.0.22",
   "homepage": "http://coffeekraken.io",
   "author": "Coffeekraken <hello@coffeekraken.io>",
   "contributors": [
@@ -21,6 +21,7 @@
     "core-js": "^3.6.1",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
+    "deepmerge": "^4.2.2",
     "document-register-element": "^1.14.3",
     "domready": "^1.0.8",
     "dotenv": "^8.2.0",
