--- a/terminal/monorepo/package.json
+++ b/terminal/monorepo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffeekraken/monorepo",
-  "version": "0.0.17",
+  "version": "0.0.24",
   "description": "Manage easily monorepo scripts, tests, etc...",
   "bin": {
     "ck": "./bin/coffeekraken-monorepo.js",
@@ -33,7 +33,6 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
     "@coffeekraken/imagemin": "^1.0.0",
     "@coffeekraken/scripts-stack": "0.0.20",
     "babel": "^6.23.0",
@@ -49,13 +48,17 @@
     "jest-raw-loader": "^1.0.1",
     "pkg-up": "^3.1.0",
     "sass": "^1.24.2",
-    "webpack": "^4.41.5",
     "@coffeekraken/docblock-to-markdown": "0.0.8",
     "@coffeekraken/sugar": "^1.0.22",
     "app-root-path": "^3.0.0",
     "find-up": "^4.1.0",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@symfony/webpack-encore": "github:symfony/webpack-encore",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.41.5"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
