--- a/terminal/webkit/package.json
+++ b/terminal/webkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffeekraken/webkit",
-  "version": "0.0.2",
+  "version": "0.0.10",
   "description": "Create easily website without the issues of configuring preprocessors like babel, webpack, imagemin, handlebars, etc...",
   "bin": {
     "ck-webkit": "./bin/coffeekraken-webkit.js",
@@ -41,17 +41,19 @@
     "@coffeekraken/docblock-to-markdown": "0.0.8",
     "@coffeekraken/imagemin": "^1.0.3",
     "@coffeekraken/pre-view": "0.0.6",
-    "@coffeekraken/scripts-stack": "0.0.20",
-    "@coffeekraken/sugar": "^1.0.22",
+    "@coffeekraken/scripts-stack": "0.0.22",
+    "@coffeekraken/sugar": "^1.0.23",
     "@symfony/webpack-encore": "github:symfony/webpack-encore",
     "app-root-path": "^3.0.0",
-    "babel": "^6.23.0",
+    "autoprefixer": "^9.7.3",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "commander": "^4.1.0",
     "config": "^3.2.4",
     "core-js": "^3.6.2",
+    "cssnano": "^4.1.10",
     "exec-sh": "^0.3.4",
     "find-up": "^4.1.0",
     "get-folder-size": "^2.0.1",
@@ -61,12 +63,19 @@
     "jest": "^24.9.0",
     "jest-raw-loader": "^1.0.1",
     "pkg-up": "^3.1.0",
+    "postcss": "^7.0.26",
+    "postcss-preset-env": "^6.7.0",
+    "precss": "^4.0.0",
+    "rucksack-css": "^1.0.2",
     "sass": "^1.24.3",
     "sass-glob-importer": "^1.0.1",
     "scss-bundle": "^3.0.2",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-import-glob": "^2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "lodash": "^4.17.15"
+  }
 }
