--- a/framework/squid-sample/package.json
+++ b/framework/squid-sample/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.1",
   "homepage": "http://coffeekraken.io",
   "scripts": {
-    "start": "node ../squid/bin/coffeekraken-squid.js start",
-    "dist.js": "node ../squid/bin/coffeekraken-squid.js dist js"
+    "start": "node ../squid/bin/coffeekraken-squid.js start dev"
   },
   "author": "Coffeekraken <hello@coffeekraken.io>",
   "contributors": [
@@ -17,7 +16,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/sugar": "^1.0.23"
+    "@babel/preset-env": "^7.8.3",
+    "@coffeekraken/sugar": "^1.0.23",
+    "babel-loader": "^8.0.6"
   },
   "devDependencies": {}
 }
