--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -21,13 +21,19 @@
     "babel-loader": "^8.0.6",
     "commander": "^4.1.0",
     "express": "^4.17.1",
+    "express-nunjucks": "^2.2.3",
     "glob": "^7.1.6",
+    "nunjucks": "^3.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "@coffeekraken/scripts-stack": "0.0.23",
     "compression-webpack-plugin": "^3.1.0",
+    "exec-sh": "^0.3.4",
     "file-size": "^1.0.0",
+    "kill-port-process": "^2.2.0",
+    "terser-webpack-plugin": "^2.3.2",
     "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
