--- a/framework/squid-sample/package.json
+++ b/framework/squid-sample/package.json
@@ -16,9 +16,11 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@coffeekraken/sugar": "^1.0.23",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "exec-sh": "^0.3.4"
   },
   "devDependencies": {}
 }
