--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -30,10 +30,11 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
-    "@coffeekraken/scripts-stack": "0.0.23",
+    "@coffeekraken/scripts-stack": "0.0.25",
     "compression-webpack-plugin": "^3.1.0",
     "file-size": "^1.0.0",
     "kill-port-process": "^2.2.0",
+    "string-replace-loader": "^2.2.0",
     "terser-webpack-plugin": "^2.3.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-concat-plugin": "^3.0.0"
