--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -13,6 +13,9 @@
   ],
   "license": "MIT",
   "scripts": {},
+  "_moduleAliases": {
+    "@coffeekraken/sugar/node"      : "../../util/sugar/src/node"
+  },
   "dependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
@@ -34,6 +37,7 @@
     "compression-webpack-plugin": "^3.1.0",
     "file-size": "^1.0.0",
     "kill-port-process": "^2.2.0",
+    "module-alias": "^2.2.2",
     "string-replace-loader": "^2.2.0",
     "terser-webpack-plugin": "^2.3.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
