--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ungap/custom-elements-builtin": "^0.1.2",
+    "chalk": "^3.0.0",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
@@ -38,10 +39,15 @@
     "jss-plugin-global": "^10.0.3",
     "jss-plugin-vendor-prefixer": "^10.0.3",
     "lodash": "^4.17.15",
+    "log-with-style": "^0.3.0",
+    "make-dir": "^3.0.0",
+    "markdown-chalk": "^2.1.0",
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
+    "nodemailer": "^6.4.2",
     "on-change": "^1.6.2",
+    "prepend-file": "^1.3.1",
     "rxjs": "^5.5.12",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
@@ -52,6 +58,8 @@
     "winston-slack-webhook-transport": "^1.1.0"
   },
   "devDependencies": {
+    "replace-in-files": "^2.0.3",
+    "symlink-dir": "^3.1.1",
     "webpack-cli": "^3.3.10"
   }
 }
