--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "scripts": {},
   "_moduleAliases": {
+    "@coffeekraken/sugar/js": "../../util/sugar/dist/js",
     "@coffeekraken/sugar/node": "../../util/sugar/src/node"
   },
   "dependencies": {
@@ -48,7 +49,9 @@
     "@coffeekraken/scripts-stack": "0.0.25",
     "compression-webpack-plugin": "^3.1.0",
     "file-size": "^1.0.0",
+    "fkill-cli": "^5.2.0",
     "import-glob-loader": "^1.1.0",
+    "kill-port": "^1.6.0",
     "kill-port-process": "^2.2.0",
     "module-alias": "^2.2.2",
     "string-replace-loader": "^2.2.0",
