--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "globalDependencies": {},
   "devDependencies": {
+    "@coffeekraken/monorepo": "0.0.27",
     "@coffeekraken/scripts-stack": "0.0.23",
     "pre-commit": "^1.2.2"
   }
