--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -36,6 +36,8 @@
     "fs-extra": "^6.0.1",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
+    "in-view": "^0.6.1",
+    "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^5.1.0",
     "is-base64": "^1.0.0",
     "jss": "^10.0.3",
@@ -58,6 +60,7 @@
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "uniqid": "^5.2.0",
+    "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
     "winston": "^3.2.1",
     "winston-mail": "^2.0.0",
