--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -46,7 +46,10 @@
     "webpack-import-glob-loader": "^1.6.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@coffeekraken/scripts-stack": "0.0.25",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "compression-webpack-plugin": "^3.1.0",
     "file-size": "^1.0.0",
     "fkill-cli": "^5.2.0",
