--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -59,6 +59,7 @@
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
+    "temp-dir": "^2.0.0",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
