--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -47,15 +47,16 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@coffeekraken/scripts-stack": "0.0.25",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^3.4.2",
     "file-size": "^1.0.0",
     "fkill-cli": "^5.2.0",
     "import-glob-loader": "^1.1.0",
     "kill-port": "^1.6.0",
     "kill-port-process": "^2.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "module-alias": "^2.2.2",
     "string-replace-loader": "^2.2.0",
     "terser-webpack-plugin": "^2.3.2",
