--- a/framework/squid-sample/package.json
+++ b/framework/squid-sample/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@coffeekraken/sugar": "^1.0.23",
     "babel-loader": "^8.0.6",
