--- a/framework/squid/package.json
+++ b/framework/squid/package.json
@@ -18,7 +18,7 @@
     "@coffeekraken/sugar/node": "../../util/sugar/src/node"
   },
   "dependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.3",
     "@coffeekraken/gridle": "0.0.6",
     "@coffeekraken/node-blade-php": "^1.0.0",
@@ -31,8 +31,16 @@
     "exec-sh": "^0.3.4",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
+    "file-loader": "^5.0.2",
     "forever": "^2.0.0",
+    "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
+    "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webp": "^5.1.0",
     "nunjucks": "^3.2.0",
     "postcss": "^7.0.26",
     "postcss-preset-env": "^6.7.0",
