--- a/framework/squid-sample/package.json
+++ b/framework/squid-sample/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.8.3",
     "@coffeekraken/sugar": "^1.0.23",
     "babel-loader": "^8.0.6",
+    "bind-methods": "^1.1.0",
     "exec-sh": "^0.3.4"
   },
   "devDependencies": {}
