--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@ungap/custom-elements-builtin": "^0.1.2",
     "base-64": "^0.1.0",
+    "blessed": "^0.1.81",
     "chalk": "^3.0.0",
+    "check-types": "^11.1.2",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
@@ -29,11 +31,13 @@
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
     "downloads-folder": "^1.0.2",
+    "envinfo": "^7.5.0",
     "es6-object-assign": "^1.1.0",
     "fastdom": "^1.0.9",
     "forever": "^2.0.0",
     "form-serialize": "^0.7.2",
     "fs-extra": "^6.0.1",
+    "get-parameter-names": "^0.3.0",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
     "in-view": "^0.6.1",
@@ -54,7 +58,10 @@
     "nodemailer": "^6.4.2",
     "object-encode": "^1.0.2",
     "on-change": "^1.6.2",
+    "parse-error": "^0.2.0",
     "prepend-file": "^1.3.1",
+    "pretty-error": "^2.1.1",
+    "renderkid": "^2.0.3",
     "rxjs": "^5.5.12",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
