--- a/webpack/coffeepack/package.json
+++ b/webpack/coffeepack/package.json
@@ -45,7 +45,10 @@
   "homepage": "https://coffeekraken.io",
   "dependencies": {
     "@coffeekraken/sugar": "^1.0.23",
+    "auto-bind": "^4.0.0",
+    "bind-methods": "^1.1.0",
     "glob": "^7.1.6",
+    "pretty-error": "^2.1.1",
     "webpack": "^4.41.5",
     "webpack-import-glob-loader": "^1.6.3"
   },
