--- a/terminal/scripts-stack/package.json
+++ b/terminal/scripts-stack/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@coffeekraken/scripts-stack",
-  "version": "0.0.25",
+  "version": "0.0.30",
   "description": "Nice terminal interface to handle npm/yarn scripts execution as well as watch and run automatically the wanted ones",
   "homepage": "https://coffeekraken.io",
   "bin": {
     "coffeekraken-scripts-stack": "./bin/coffeekraken-scripts-stack",
     "ck-scripts-stack": "./bin/coffeekraken-scripts-stack"
+  },
+  "scripts": {
+    "test": "cat src/dumbContent.txt"
   },
   "keywords": [
     "coffee",
@@ -28,7 +31,12 @@
     }
   ],
   "license": "MIT",
+  "_moduleAliases": {
+    "@coffeekraken/sugar/js": "../../util/sugar/dist/js",
+    "@coffeekraken/sugar/node": "../../util/sugar/src/node"
+  },
   "devDependencies": {
+    "module-alias": "^2.2.2",
     "standard": "^10.0.3"
   },
   "dependencies": {
