--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -67,6 +67,7 @@
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "temp-dir": "^2.0.0",
+    "terminal-kit": "^1.32.3",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
