--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ungap/custom-elements-builtin": "^0.1.2",
+    "ansi-escapes": "^4.3.0",
     "base-64": "^0.1.0",
     "blessed": "^0.1.81",
     "chalk": "^3.0.0",
