--- a/webpack/coffee-loader/package.json
+++ b/webpack/coffee-loader/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "@coffeekraken/webpack-coffeepack",
+  "name": "@coffeekraken/webpack-coffee-loader",
   "version": "0.0.1",
-  "description": "Coffeepack let you configure your webpack instance as simply and pleasant as drink a coffee. It will handle the compilation/optimization of your CSS (css,sass,scss), JS (js,coffee,ts), images (jpg,png,gif,webp,svg) and more...",
+  "description": "The webpack coffee loader let you easily specify some files processors function by file extensions that will be applied on each files builded by webpack.",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Coffeekraken/coffeekraken/tree/master/webpack/coffeepack"
+    "url": "https://github.com/Coffeekraken/coffeekraken/tree/master/webpack/coffee-loader"
   },
   "keywords": [
     "coffee",
     "kraken",
     "coffeekraken",
     "webpack",
-    "lazy",
-    "load",
-    "lazyload",
-    "compilation",
-    "optimization",
     "css",
     "scss",
     "sass",
@@ -29,9 +24,7 @@
     "png",
     "gif",
     "svg",
-    "webp",
-    "concat",
-    "concatenation"
+    "webp"
   ],
   "author": "Coffeekraken <hello@coffeekraken.io>",
   "contributors": [
@@ -44,14 +37,23 @@
   "license": "MIT",
   "homepage": "https://coffeekraken.io",
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@coffeekraken/sugar": "^1.0.23",
     "auto-bind": "^4.0.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
     "glob": "^7.1.6",
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
     "loader-utils": "^1.2.3",
-    "pretty-error": "^2.1.1",
-    "webpack": "^4.41.5",
-    "webpack-import-glob-loader": "^1.6.3"
+    "sass": "^1.25.0",
+    "sass-glob-importer": "^1.0.1",
+    "scss-bundle": "^3.0.2",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {}
 }
