--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -35,9 +35,11 @@
     "envinfo": "^7.5.0",
     "es6-object-assign": "^1.1.0",
     "fastdom": "^1.0.9",
+    "filesize": "^6.0.1",
     "forever": "^2.0.0",
     "form-serialize": "^0.7.2",
     "fs-extra": "^6.0.1",
+    "get-folder-size": "^2.0.1",
     "get-parameter-names": "^0.3.0",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
@@ -69,6 +71,7 @@
     "stringify-object": "^3.3.0",
     "temp-dir": "^2.0.0",
     "terminal-kit": "^1.32.3",
+    "terminal-overwrite": "^2.0.1",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
