--- a/webpack/coffee-loader/package.json
+++ b/webpack/coffee-loader/package.json
@@ -46,13 +46,22 @@
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
+    "cli-progress": "^3.6.0",
+    "coffeescript": "^2.5.1",
+    "colors": "^1.4.0",
+    "file-type": "^14.1.2",
     "glob": "^7.1.6",
     "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webp": "^5.1.0",
     "loader-utils": "^1.2.3",
     "sass": "^1.25.0",
     "sass-glob-importer": "^1.0.1",
     "scss-bundle": "^3.0.2",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5"
   },
   "devDependencies": {}
