--- a/framework/squid-sample/package.json
+++ b/framework/squid-sample/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@coffeekraken/gridle": "0.0.6",
     "@coffeekraken/sugar": "^1.0.23",
     "babel-loader": "^8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
     "exec-sh": "^0.3.4",
