--- a/terminal/coffeebuilder/package.json
+++ b/terminal/coffeebuilder/package.json
@@ -2,7 +2,7 @@
   "name": "@coffeekraken/webpack-coffeepack",
   "version": "0.0.1",
   "description": "Coffeepack let you configure your webpack instance as simply and pleasant as drink a coffee. It will handle the compilation/optimization of your CSS (css,sass,scss), JS (js,coffee,ts), images (jpg,png,gif,webp,svg) and more...",
-  "main": "src/index.js",
+  "main": "src/node/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Coffeekraken/coffeekraken/tree/master/webpack/coffeepack"
@@ -44,12 +44,31 @@
   "license": "MIT",
   "homepage": "https://coffeekraken.io",
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@coffeekraken/sugar": "^1.0.23",
     "auto-bind": "^4.0.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
+    "cfonts": "^2.7.0",
+    "chokidar": "^3.3.1",
+    "coffeescript": "^2.5.1",
     "glob": "^7.1.6",
+    "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.1.0",
+    "imagemin-webp": "^5.1.0",
     "loader-utils": "^1.2.3",
+    "module-alias": "^2.2.2",
     "pretty-error": "^2.1.1",
+    "sass": "^1.25.0",
+    "sass-glob-importer": "^1.0.1",
+    "scss-bundle": "^3.0.2",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-import-glob-loader": "^1.6.3"
   },
