--- a/terminal/coffeebuilder/package.json
+++ b/terminal/coffeebuilder/package.json
@@ -65,9 +65,11 @@
     "loader-utils": "^1.2.3",
     "module-alias": "^2.2.2",
     "pretty-error": "^2.1.1",
+    "restore-cursor": "^3.1.0",
     "sass": "^1.25.0",
     "sass-glob-importer": "^1.0.1",
     "scss-bundle": "^3.0.2",
+    "terser": "^4.6.3",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-import-glob-loader": "^1.6.3"
