--- a/terminal/coffeebuilder/package.json
+++ b/terminal/coffeebuilder/package.json
@@ -52,8 +52,10 @@
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
+    "cacache": "^15.0.0",
     "cfonts": "^2.7.0",
     "chokidar": "^3.3.1",
+    "clean-css": "^4.2.3",
     "coffeescript": "^2.5.1",
     "glob": "^7.1.6",
     "imagemin": "^7.0.1",
@@ -62,8 +64,10 @@
     "imagemin-pngquant": "^8.0.0",
     "imagemin-svgo": "^7.1.0",
     "imagemin-webp": "^5.1.0",
+    "listr": "^0.14.3",
     "loader-utils": "^1.2.3",
     "module-alias": "^2.2.2",
+    "ora": "^4.0.3",
     "pretty-error": "^2.1.1",
     "restore-cursor": "^3.1.0",
     "sass": "^1.25.0",
