--- a/terminal/coffeebuilder/package.json
+++ b/terminal/coffeebuilder/package.json
@@ -52,11 +52,13 @@
     "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-transform-dynamic-import-default": "0.0.4",
     "bind-methods": "^1.1.0",
+    "blessed": "^0.1.81",
     "cacache": "^15.0.0",
     "cfonts": "^2.7.0",
     "chokidar": "^3.3.1",
     "clean-css": "^4.2.3",
     "coffeescript": "^2.5.1",
+    "commander": "^4.1.1",
     "glob": "^7.1.6",
     "imagemin": "^7.0.1",
     "imagemin-gifsicle": "^7.0.0",
