--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -56,6 +56,7 @@
     "log-with-style": "^0.3.0",
     "make-dir": "^3.0.0",
     "markdown-chalk": "^2.1.0",
+    "merge-anything": "^3.0.2",
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
