--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -23,6 +23,7 @@
     "blessed": "^0.1.81",
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
+    "color-convert": "^2.0.1",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
@@ -43,6 +44,8 @@
     "get-parameter-names": "^0.3.0",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
+    "image-pixels": "^2.2.2",
+    "imaging": "^2.1.2",
     "in-view": "^0.6.1",
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^5.1.0",
@@ -72,7 +75,7 @@
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "temp-dir": "^2.0.0",
-    "terminal-kit": "^1.32.3",
+    "terminal-kit": "^1.35.1",
     "terminal-overwrite": "^2.0.1",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
