--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -50,7 +50,9 @@
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^5.1.0",
     "is-base64": "^1.0.0",
+    "is-class": "0.0.9",
     "is-plain-object": "^3.0.0",
+    "is-valid-path": "^0.1.1",
     "jss": "^10.0.3",
     "jss-plugin-global": "^10.0.3",
     "jss-plugin-vendor-prefixer": "^10.0.3",
