--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -13,9 +13,7 @@
   ],
   "main": "dist/js/_all.js",
   "license": "MIT",
-  "scripts": {
-    "postinstall": "node ./scripts/postinstall.js"
-  },
+  "scripts": {},
   "dependencies": {
     "@ungap/custom-elements-builtin": "^0.1.2",
     "ansi-escapes": "^4.3.0",
@@ -27,6 +25,7 @@
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
+    "deep-diff": "^1.0.2",
     "deepmerge": "^4.2.2",
     "document-register-element": "^1.14.3",
     "domready": "^1.0.8",
@@ -77,7 +76,7 @@
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "temp-dir": "^2.0.0",
-    "terminal-kit": "^1.35.1",
+    "terminal-kit": "^1.35.2",
     "terminal-overwrite": "^2.0.1",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
