--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -22,6 +22,7 @@
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
     "color-convert": "^2.0.1",
+    "console-pos": "^1.0.2",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "custom-event": "^1.0.1",
@@ -48,6 +49,7 @@
     "in-view": "^0.6.1",
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^5.1.0",
+    "inquirer": "^7.1.0",
     "is-base64": "^1.0.0",
     "is-class": "0.0.9",
     "is-plain-object": "^3.0.0",
@@ -70,6 +72,7 @@
     "parse-error": "^0.2.0",
     "prepend-file": "^1.3.1",
     "pretty-error": "^2.1.1",
+    "prompts": "^2.3.2",
     "renderkid": "^2.0.3",
     "rxjs": "^5.5.12",
     "simple-ajax": "^2.6.0",
