--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -66,6 +66,7 @@
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
+    "node-machine-id": "^1.1.12",
     "nodemailer": "^6.4.2",
     "object-encode": "^1.0.2",
     "on-change": "^1.6.2",
