--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ungap/custom-elements-builtin": "^0.1.2",
     "ansi-escapes": "^4.3.0",
+    "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "blessed": "^0.1.81",
     "chalk": "^3.0.0",
@@ -70,6 +71,7 @@
     "nodemailer": "^6.4.2",
     "object-encode": "^1.0.2",
     "on-change": "^1.6.2",
+    "ora": "^4.0.3",
     "parse-error": "^0.2.0",
     "prepend-file": "^1.3.1",
     "pretty-error": "^2.1.1",
