--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -70,6 +70,8 @@
     "markdown-chalk": "^2.1.0",
     "merge-anything": "^3.0.2",
     "merge-deep": "^3.0.2",
+    "micromatch": "^4.0.2",
+    "mixin-deep": "^2.0.1",
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
     "node-machine-id": "^1.1.12",
