--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -97,7 +97,8 @@
     "url-parse": "^1.4.7",
     "winston": "^3.2.1",
     "winston-mail": "^2.0.0",
-    "winston-slack-webhook-transport": "^1.1.0"
+    "winston-slack-webhook-transport": "^1.1.0",
+    "yargs-parser": "^18.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
